Add new dependency to notebook

--- a/src/nb/main_notebook.ipynb
+++ b/src/nb/main_notebook.ipynb
@@ -17,6 +17,7 @@
       "outputs": [],
       "source": [
         "# install openmim from pip\n",
+        "!pip install torchmetrics\n",
         "!pip install -U openmim\n",
         "!mim install mmengine\n",
         "!mim install mmcv\n",
